--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "dotenv -- nodemon",
+    "dev": "dotenv -e .env.local -- nodemon",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint",
@@ -20,6 +20,9 @@
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@tsconfig/node22": "^22.0.2",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "dotenv-cli": "^10.0.0",
@@ -39,5 +42,12 @@
   },
   "imports": {
     "#src/*.ts": "./src/*.ts"
+  },
+  "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "serverless-http": "^4.0.0",
+    "zod": "^4.1.5"
   }
 }
