--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "#src/*.ts": "./src/*.ts"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "aws-lambda": "^1.0.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "serverless-http": "^4.0.0",
     "zod": "^4.1.5"
   }
